# OliPLUS

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.dev  Dockerfile.ui  README.md  asgi.py  desktop.ini  docker-compose.yaml  launch.json  launch.py  launch_cockpit.py  makefile  pyproject.toml  requirements.full.txt  settings.py  tri_migration_cockpit.py  url.py
api/: secure_download.py
app/: admin.py
app/rh/: apps.py
apps/admin/: apps.py
apps/compta/: signals.py
apps/finance/: apps.py
apps/users/: apps.py
assets/vector/: icône_action_cockpit.xml
auth/: reset_token.py
backend/: Dockerfile.api  Dockerfile.workers  api_app.py  kobo_db_handler.py  license_verifier.py  main.py
backend/api/: billing_api.py
backend/cache/: database_cache_backend.py
backend/cgi/: plugin_launcher.cgi
backend/core/: permissions.py
backend/errors/: task_backend_error.py
backend/feeds/: FluxActualites.py  urls.py
backend/feeds/base/: Feed.py
backend/models/: Devis.py
backend/wsgi/: oliplus_wsgi.py
cli/: dashboard_launcher.py  db.py  oli_cli.py
compta/models/: facture.py  taxes.py
core/: db.py  document_ingestor.py  main_cockpit.py  odoo_initializer.py
core/boots/: cockpit_boot.py
core/classification/: ClassificationService.py  OliClassificationManager.py
core/db/: auto_close_old_connections.py
core/deploiement/: deploiement_classification.py  deploy_classification_fallback.py  deploy_classification_files.py
core/filters/: employee_filters.py
core/importers/: import_meta_types.py
core/models/: automation_workflow.py  oli_models.py
core/security/: admin_context.py
core/sessions/: sessionstore.py
core/tasks/: TaskBackend.py  local_backend.py
core/utils/: json_tools.py
dashboard_ui/: cockpit_metrics_view.py  cockpit_typologie_view.py  document_dashboard_view.py  gda_structure.py  monitor_mod_oli_001.py  streamlit_file_viewer.py  upload_document_cockpit.py
docs/: structure_cockpit_ia.yaml
docs/classification/: plan_de_classification.yaml
docs/exports/: classification_export.md
docs/stratégie/: plan_commercialisation_oipilus.yaml
env/: env_boot.py
factories/: department_factory.py
frontend/: affiliations_view.html  migration_dashboard.py
frontend/components/: billing_module.vue
frontend/dashboard/: dashboard_ui.py  injectCockpit.js  validation_viewer.html
frontend/js/: documentsViewer.js
frontend/modules/: analyse_des_couts_et_rentabilite.html  cockpit_dashboard.html  cockpit_patimonial.html  cockpit_projet_editorial_ia.html  comparatif_imprimeurs.html  grille_classification.html
frontend/streamlit_app/: Dockerfile.streamlit  mattermost_cockpit.py
frontend/templates/: accueil_view.html  inscription_view.html  login_view.html  monitoring_view.html
frontend/views/: classification_cockpit.py  dashboard_ui_view.py  deploy_classification_view.py  documents_by_segment.html
gitdb/modules/: git_cmd_object_db.py
hr/: approval_chain.py  hr_visibility.py
infra/: docker-compose.yaml
integrations/ams/: MonitoringMiddlewareInterface.php
json/: config.json
modules/: document_ingestor.py
modules/auth/: auth_service.py
modules/excel/: manifest.py
modules/finance/: finance_core.py
modules/pdf/: extract_paragraphs.py
modules/rh/: attendance.py
monitoring/: prometheus_setup.py
notifications/: send_password_reset_email.py
odoo/: dispatch_admin.py
plotty/validators/: db_validator.py
progress/: progress_report.py
repositories/: user_repository.py
roadmap/: roadmap_cockpit.yaml
scripts/: checkpoints_scan.py  deploy_cockpit.py  docker_logs_status.py  filter_and_export.py  generate_system_report.py  init_git_folders.ps1  install_requirements.py  maintenance_systeme.ps1  manual_comparator.py  scan_structure.py  validate_connection.py
security/: token_generator.py
service/: db.py
service/api/: language_router.py
services/api/: cockpit_api.py
sessions/: custom_backend.py
settings/: local.py
simulation/restart/: config_restart.yaml  couplig_montdg_restart.py
streamlit/: cockpit_uploader.py  inject_documents.py
tests/: test_builder_engine.py  test_cockpit_rh_launcher.py  test_main_api.py
tools/: changelog.md  changelog_cli.py  cockpit_server.py  diagnostic_firestore_websocket.py  scan_nuxeo.py  schema_sql_generator.py  structure_scanner.py  update_imports.py
tools/audit/: audit_structure.py  codebase_scan.py  extract_models_yaml.py
tools/auth/: create_user_cli.py
tools/cli/: cli_classification_viewer.py  cli_explorateur_classification.py  diagnostics.py
tools/dashboard/: cockpit_system_view.py  cockpit_tracker_view.py  dashboard_generator.py  dashboard_html_launcher.py  dashboard_structure_view.py  dashboard_ui.py  rapport_exploration.py
tools/dependencies/: generate_dependencies.py
tools/dev/: audit_requirements.py  fix_init.py  generate_structure_file.py
tools/export/: exportCockpit.js
tools/init/: init_database.py
tools/launch/: launch_cockpit.sh
tools/migration/: yaml_executor.py
tools/monitoring/: grafana_snapshot.py
tools/structure/: init_file_generator.py
tools/sync/: SyncEngine.py
users/: admin.py
utils/: setup_logging.py
validators/: presto_sql_validator.py
visuals/: Bilan_Cockpit_du_Logiciel.html
workflows/: schemas.py
(+2 files in other folders)
